alterei div para footer

--- a/index.html
+++ b/index.html
@@ -52,11 +52,11 @@
 
   </main>
 
-  <div class="rodape d-flex justify-content-evenly w-75">
+  <footer class="rodape d-flex justify-content-evenly w-75">
     <p>Challenge by <a class="links" href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend
         Mentor</a>.</p>
     <p>Coded by <a class="links" href="https://ingridssilveira.github.io/IngridSouza/">Ingrid Souza</a>.</p>
-  </div>
+    </footer>
 
   <script src="./assets/js/main.js"></script>
 </body>
